syntax = "proto3";

package departments;

option go_package = "github.com/example/micro/proto/gen/go/departments;departmentspb";

message Department {
  int64 id = 1;
  string title = 2;
}

message CreateDepartmentRequest { string title = 1; }
message CreateDepartmentResponse { Department department = 1; }

message GetDepartmentRequest { int64 id = 1; }
message GetDepartmentResponse { Department department = 1; }

message ListDepartmentsRequest { int32 limit = 1; int32 offset = 2; }
message ListDepartmentsResponse { repeated Department departments = 1; }

message UpdateDepartmentRequest {
  int64 id = 1;
  string title = 2;
}
message UpdateDepartmentResponse { Department department = 1; }

message DeleteDepartmentRequest { int64 id = 1; }
message DeleteDepartmentResponse {}

service DepartmentsService {
  rpc CreateDepartment(CreateDepartmentRequest) returns (CreateDepartmentResponse);
  rpc GetDepartment(GetDepartmentRequest) returns (GetDepartmentResponse);
  rpc ListDepartments(ListDepartmentsRequest) returns (ListDepartmentsResponse);
  rpc UpdateDepartment(UpdateDepartmentRequest) returns (UpdateDepartmentResponse);
  rpc DeleteDepartment(DeleteDepartmentRequest) returns (DeleteDepartmentResponse);
}
